# Olimiter

./: CMakeLists.txt  README.md
include/: limiter.h  seconds_limiter.cc  seconds_limiter.h  smooth_limiter.h  token_bucket.h  token_limiter.h
src/: seconds_limiter_test.cc
